--- a/backend/cartService/.env.example
+++ b/backend/cartService/.env.example
@@ -1,7 +1,7 @@
 PORT=5004 # SET PORT NO. FOR CART SERVICE
 
 
-MONGO_URL=mongodb+srv://<user>:<password>@cluster0.4mknq.mongodb.net # SET YOUR MONGO DB URI
+MONGO_URL=mongodb+srv://<user>:<password>@xyz.mongodb.net # SET YOUR MONGO DB URI
 
 JWT_SECRET=PROJECT   # USE SAME JWT FOR ALL SERVICES
 
